# zed-ftp-sync

./: .zed-ftp-config.json  Cargo.toml  README.md
src/: lib.rs
