[package]
name = "zed-ftp-sync"
version = "0.1.0"
edition = "2021"
authors = ["Diego Rainero <diego.rainero@gmail.com>"]
description = "Plugin per Zed che sincronizza automaticamente i file modificati via FTP"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
suppaftp = "4.1"
anyhow = "1.0"
log = "0.4"

[package.metadata.zed]
id = "ftp-sync"
name = "FTP Sync"
description = "Sincronizza automaticamente i file modificati via FTP"
version = "0.1.0"
schema_version = 1
authors = ["Diego Rainero <diego.rainero@gmail.com>"]
repository = "https://github.com/diegorainero/zed-ftp-sync"
